# Atlas-Fusion-2.0

./: .editorconfig  .gitignore  .gitmodules
src/: CMakeLists.txt  config.yaml  package.xml
src/include/: ConfigService.h  EntryPoint.h  FrameTypes.h  IdentifierToFrameConversions.h  RecordingConstants.h  TFTree.h  Topics.h
src/include/algorithms/: CameraProjector.h  Kalman1D.h  LidarFilter.h  PointCloudAggregator.h  PointCloudExtrapolator.h  PointCloudProcessor.h  QuaternionConversions.h
src/include/camera_processing/: YoloDetector.h
src/include/data_loaders/: CameraDataLoader.h  DataLoaderController.h  DataLoaderIdentifiers.h  GnssDataLoader.h  ImuDataLoader.h  LidarDataLoader.h  RadarDataLoader.h  RecordingConstants.h
src/include/data_models/: CameraCalibrationParams.h  FrustumDetection.h  GlobalPosition.h  LidarDetection.h  LocalPosition.h  PointCloudBatch.h  YoloDetectionClass.h
src/include/lidar_processing/: LidarAggregator.h  LidarDetector.h
src/include/logging/: Log.h
src/include/position_processing/: SelfModel.h
src/include/precompiled_headers/: PCH.h
src/include/util/: CsvReader.h  Macros.h  Timer.h
src/libs/fmt/: format.h
src/src/: EntryPoint.cpp  IdentifierToFrameConversions.cpp  TFTree.cpp  main.cpp
src/src/algorithms/: CameraProjector.cpp  Kalman1D.cpp  PointCloudAggregator.cpp  PointCloudExtrapolator.cpp  PointCloudProcessor.cpp
src/src/camera_processing/: YoloDetector.cpp
src/src/data_loaders/: CameraDataLoader.cpp  DataLoaderController.cpp  GnssDataLoader.cpp  ImuDataLoader.cpp  LidarDataLoader.cpp  RadarDataLoader.cpp
src/src/data_models/: LocalPosition.cpp  PointCloudBatch.cpp  YoloDetectionClass.cpp
src/src/lidar_processing/: LidarAggregator.cpp  LidarDetector.cpp
src/src/logging/: Log.cpp
src/src/position_processing/: SelfModel.cpp
src/src/util/: CsvReader.cpp
